2005-04-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	* CDebugCorePlugin.java
	* MappingSourceContainer.java
	* SourceLookupMessages.java: new
	* SourceLookupMessages.properties: new
	* CBreakpointManager.java
	* ICDebugInternalConstants.java
	* CommonSourceLookupDirector.java: new
	* CSourceLookupDirector.java
	* CSourceLookupParticipant.java
	* CSourcePathComputerDelegate.java
	* InternalSourceLookupMessages.properties
	* MapEntrySourceContainer.java
	* MapEntrySourceContainerType.java
	* MappingSourceContainerType.java
	* SourceUtils.java

2005-04-15 Alain Magloire
	Fix Pr 91581
	* src/org/eclipse/cdt/debug/internal/core/breakpoint/CAddressBreakpoint.java

2005-04-07 Mikhail Khodjaiants
	Move to Eclipse-31M6.
	* CMemoryBlockRetrievalExtension.java
	* CMemoryBlockExtension.java

2005-04-07 Mikhail Khodjaiants
	Bug 89755: CThread.suspend suspends target, not thread.
	* CThread.java

2005-04-04 Alain Magloire
	Move to Eclipse-31M6
	- src/org/eclipse/cdt/debug/internal/core/CMemoryBlockExtensionRetrieval.java
	+ src/org/eclipse/cdt/debug/internal/core/CMemoryBlockRetrievalExtension.java
	* src/org/eclipse/cdt/debug/internal/core/model/CDebugTarget.java
	* src/org/eclipse/cdt/debug/internal/core/model/CMemoryBlockExtension.java

2005-03-24 Alain Magloire
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlock.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlockManagement.java
	* src/org/eclipse/cdt/debug/internal/core/model/CMemoryBlockExtension.java

2005-03-23 Alain Magloire
	Change is the ICDIMemoryBlock&& ICDIMemoryManagement API
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlock.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlockManagement.java
	* src/org/eclipse/cdt/debug/internal/core/model/CMemoryBlockExtension.java

2005-03-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.